2005-10-05  Stipe Tolj  <stolj@wapme-group.de>
   * gw/wap_push_ppg.c: possibly fixing bug #144, initializing Octstr vars
     that are destroyed afterwards in case of a failed URL compare, waiting on 
     Jonathan for feedback.
   
2005-10-05  Stipe Tolj  <stolj@wapme-group.de>
   * gw/wml_compiler.c: fixing bug #255 where we pass a NULL result from 
     xmlDocGetRootElement() within parse_document() to the next functions and 
     hence causing an segfault. Thanks a lot to Mindaugas Riauba <mind@bi.lt>
     for the bug report and the fix suggestion.
     [Msg-Id: <01ad01c5c807$8bca3ba0$f20214ac@bite.lt>]

2005-10-04  Stipe Tolj  <stolj@wapme-group.de>
   * doc/examples/modems.conf: commenting 'no-smsc' value for Falcom GSM modems,
     this breaks the PDU string acceptance as far as we tested. Should be 'false'
     for the Falcom modem type.

2005-09-27  Stipe Tolj  <stolj@wapme-group.de>
   * gwlib/dlrpool_sqlite3.c, gwlib/dbpool.[ch]: added SQLite3 support for database 
     pool constructs. This can be used to implement a DLR storage type for SQLite3.
   * gw-config.h.in, configure[.in]: added SQLite3 support, this is only the 
     configuration part, yet no DLR storage implemenation for this.

2005-09-27  Stipe Tolj  <stolj@wapme-group.de>
   * gw/dlr_pgsql.c: fixed a typo from previous commit on this that broke 
     compilation. No logic change.
      
2005-09-27  Alexander Malysh <amalysh at kannel.org>
   * gw/bb_store.c: fixed start sequence of store file. Now we don't allow using
     of store until store file was not loaded (all attempts to use store will block).
     Also fixed some memory leaks.

2005-09-26  Stipe Tolj  <stolj@wapme-group.de>
   * configure[.in]: changed --with-sdb handling in order to break configure
     process if the libSDB client library is not found.
   
2005-09-26  Stipe Tolj  <stolj@wapme-group.de>
   * Makefile.in: added removal of 'config.nice' for distclean target.

2005-09-22  Alexander Malysh <amalysh at kannel.org>